## 0.5.1 / 2019-01-19

* [ENHANCEMENT] Add shortnames on CRD registration.

## 0.5.0 / 2018-10-24

* [ENHANCEMENT] Add support for Kubernetes 1.11.

## 0.4.1 / 2018-10-07

* [FEATURE] Add enable subresources support on CRD registration.
* [FEATURE] Add category support on CRD registration.

## 0.4.0 / 2018-07-21

This release breaks Prometheus metrics.

* [ENHANCEMENT] Add grafana dashboard for the refactored Prometheus metrics.
* [ENHANCEMENT] Refactor metrics in favor of less metrics but simpler and more meaningful.

## 0.3.0 / 2018-07-02

This release breaks handler interface to allow passing a context (used to allow tracing).

* [FEATURE] Add context as first argument to handler interface to pass tracing context (Breaking change).
* [FEATURE] Add tracing through opentracing.
* [FEATURE] Add leader election for controllers and operators.
* [ENHANCEMENT] Let customizing (using configuration) the retries of event processing errors on controllers.
* [ENHANCEMENT] Controllers now can be created using a configuration struct.
* [ENHANCEMENT] Add support for Kubernetes 1.10.

## 0.2.0 / 2018-02-24

This release breaks controllers constructors to allow passing a metrics recorder backend.

* [BUGFIX] Fix passing a nil logger to make controllers execution break.
* [ENHANCEMENT] Controllers record metrics about queued and processed events.
* [FEATURE] Add Prometheus metrics backend.
* [FEATURE] Add metrics interface.
* [FEATURE] Add concurrent controller implementation.

## 0.1.0 / 2018-02-15

* [FEATURE] Add CRD client check for kubernetes apiserver (>=1.7)
* [FEATURE] Add CRD ensure (waits to be present after registering a CRD)
* [FEATURE] Add CRD client tooling
* [FEATURE] Add multiple CRD and multiple controller operator.
* [FEATURE] Add single CRD and single controller operator.
* [FEATURE] Add sequential controller implementation.
* [FEATURE] Dependencies managed by dep and vendored.