@@ -5,7 +5,7 @@ services:
 
 language: go
 go:
-  - "1.11.4"
+  - "1.12.1"
 
 before_install:
   - curl -Lo minikube https://storage.googleapis.com/minikube/releases/${MINIKUBE_VERSION}/minikube-linux-amd64 && chmod +x minikube && sudo mv minikube /usr/local/bin/
@@ -17,5 +17,5 @@ script:
 env:
   global:
     - GO111MODULE=on
-    - MINIKUBE_VERSION=v0.25.2
-    - KUBERNETES_VERSION=v1.10.0
+    - MINIKUBE_VERSION=v0.35.0
+    - KUBERNETES_VERSION=1.12.6
