@@ -2,7 +2,6 @@ module github.com/spotahome/kooper
 
 require (
 	github.com/Pallinder/go-randomdata v0.0.0-20180329154440-dab270d296c6
-	github.com/beorn7/perks v0.0.0-20160804104726-4c0e84591b9a // indirect
 	github.com/codahale/hdrhistogram v0.0.0-20161010025455-3a0bb77429bd // indirect
 	github.com/davecgh/go-spew v1.1.0 // indirect
 	github.com/ghodss/yaml v1.0.0 // indirect
@@ -17,7 +16,6 @@ require (
 	github.com/imdario/mergo v0.0.0-20180119215619-163f41321a19 // indirect
 	github.com/json-iterator/go v0.0.0-20180701071628-ab8a2e0c74be // indirect
 	github.com/kr/pretty v0.1.0 // indirect
-	github.com/matttproud/golang_protobuf_extensions v1.0.0 // indirect
 	github.com/modern-go/concurrent v0.0.0-20180306012644-bacd9c7ef1dd // indirect
 	github.com/modern-go/reflect2 v0.0.0-20180701023420-4b7aa43c6742 // indirect
 	github.com/onsi/gomega v1.4.2 // indirect
@@ -26,10 +24,7 @@ require (
 	github.com/peterbourgon/diskv v2.0.1+incompatible // indirect
 	github.com/pkg/errors v0.8.0 // indirect
 	github.com/pmezard/go-difflib v1.0.0 // indirect
-	github.com/prometheus/client_golang v0.0.0-20180216131253-e69720d204a4
-	github.com/prometheus/client_model v0.0.0-20171117100541-99fa1f4be8e5 // indirect
-	github.com/prometheus/common v0.0.0-20180110214958-89604d197083 // indirect
-	github.com/prometheus/procfs v0.0.0-20180212145926-282c8707aa21 // indirect
+	github.com/prometheus/client_golang v0.9.2
 	github.com/spf13/pflag v1.0.0 // indirect
 	github.com/stretchr/objx v0.1.0 // indirect
 	github.com/stretchr/testify v1.2.0
@@ -39,15 +34,15 @@ require (
 	go.uber.org/atomic v1.3.2 // indirect
 	golang.org/x/crypto v0.0.0-20180127211104-1875d0a70c90 // indirect
 	golang.org/x/oauth2 v0.0.0-20180207181906-543e37812f10 // indirect
-	golang.org/x/sync v0.0.0-20180314180146-1d60e4601c6f
+	golang.org/x/sync v0.0.0-20181108010431-42b317875d0f
 	golang.org/x/time v0.0.0-20180314180208-26559e0f760e // indirect
 	google.golang.org/appengine v1.0.0 // indirect
 	gopkg.in/check.v1 v1.0.0-20180628173108-788fd7840127 // indirect
 	gopkg.in/inf.v0 v0.9.0 // indirect
-	k8s.io/api v0.0.0-20180904230853-4e7be11eab3f
-	k8s.io/apiextensions-apiserver v0.0.0-20180910084140-b05d9bb7cc74
-	k8s.io/apimachinery v0.0.0-20180904193909-def12e63c512
-	k8s.io/client-go v2.0.0-alpha.0.0.20180910083459-2cefa64ff137+incompatible
+	k8s.io/api v0.0.0-20181128191700-6db15a15d2d3
+	k8s.io/apiextensions-apiserver v0.0.0-20190118124337-a384d17938fe
+	k8s.io/apimachinery v0.0.0-20181128191346-49ce2735e507
+	k8s.io/client-go v2.0.0-alpha.0.0.20190115164855-701b91367003+incompatible
 	k8s.io/kube-openapi v0.0.0-20180420230433-1e45fb05b063 // indirect
-	k8s.io/kubernetes v1.11.3
+	k8s.io/kubernetes v1.12.5
 )
