@@ -1,3 +1,7 @@
+## 0.x.x / 2019-xx-xx
+
+* [ENHANCEMENT] Add support for Kubernetes 1.12.
+
 ## 0.5.1 / 2019-01-19
 
 * [ENHANCEMENT] Add shortnames on CRD registration.
